--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,7 @@ language: python
 before_install:
     - sudo apt-get -qq update
     - sudo apt-get install -y nvidia-cuda-toolkit git
+install:
+    - pip install -r requirements.txt
+script:
+    - :
