--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,13 @@ sudo: enabled
 language: python
 before_install:
     - sudo apt-get -qq update
-    - sudo apt-get install -y nvidia-cuda-toolkit git
+    - sudo apt-get install -y nvidia-cuda-toolkit git cmake
+    - wget https://developer.nvidia.com/compute/cuda/8.0/prod/local_installers/cuda-repo-ubuntu1404-8-0-local_8.0.44-1_amd64-deb
+    - sudo dpkg --install cuda-repo-ubuntu1404-8-0-local_8.0.44-1_amd64-deb
+    - sudo apt-get update
+    - sudo apt-get install -y cuda
 install:
     - pip install -r requirements.txt
+    - sh ./build-pyamgx.sh
 script:
     - sleep 1
