--- a/conda_environments/amgx/meta.yaml
+++ b/conda_environments/amgx/meta.yaml
@@ -1,11 +1,21 @@
 package:
-    name: amgx
-    version: 2.0.0.130
+  name: amgx
+  version: v2.1.0
+
+build:
+  script_env:
+    - CC
+    - CXX
+    - LD_LIBRARY_PATH
 
 source:
-    git_rev: 732338c32e30ad87f9b71244346346f66fc3f735
-    git_url: https://github.com/NVIDIA/AMGX
+  git_url: https://github.com/NVIDIA/AMGX
+  git_rev: v2.1.0
 
 requirements:
-    build:
-        - cmake
+  build:
+    - cmake
+  host:
+    - cudatoolkit
+  run:
+    - {{ pin_compatible('cudatoolkit', max_pin='x.x') }}
